--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class=overlay><span class = bold>Archimedes's Constant: π</span>
             <p> The first recorded calculations of π was done by Archimedes of Syracuse (287-212B.C)</p>
             <p> It is defined in Euclidean geometry as the ratio of a circle's circumference to its diameter, this ratio is equal to 3.141...</p>
-            <p> Today π has thousand of practical applications from calculating the area of a frisbee to the circumference of Saturn's rings</p> 
+            <p> Today π has thousand of practical applications from figuring out the area of a frisbee to calculating the circumference of Saturn's rings</p> 
           </div>
         </div>
 
@@ -46,8 +46,8 @@
             <p> Feigenbaum officially published his discovery of δ in 1978 
             <p> δ is the limiting ratio of each bifurcation interval to the next between every period doubling, of a one-parameter map. 
               To elaborate on what this means, if you look at the image shown you'll notice that the graph splits into two, and then splits in two again and then goes into "chaos", each split is 
-              is known as a "bifurcation" so what Feigenbaum discovered is that when you divide the length one bifurcation by the length of the next the ratios will always approach 4.669... which is known as δ or Feigenbaum's Constant</p>
-            <p> Bifurcation diagrams have many uses some of which include population growth, neuron activity, and fractal plotting and Feigenbaum's constant can be observed in each of those cases as well as hundreds more</p>
+              known as a "bifurcation", so what Feigenbaum discovered is that when you divide the length one bifurcation by the length of the next the ratios will always approach 4.669... which is known as δ or Feigenbaum's Constant</p>
+            <p> Bifurcation diagrams have many uses some of which include population growth, neuron activity, and fractal plotting, Feigenbaum's constant can be observed in each of those cases as well as hundreds more</p>
 
           </div>
         </div>
@@ -57,7 +57,7 @@
           <div class=overlay><span class = bold>The Golden Ratio: ϕ </span>
            <p>ϕ was first discovered by Euclid of Alexandria(365-300B.C)</p>
            <p> Two quantities are in the golden ratio if their ratio is the same as the ratio of their sum to the larger of the two quantities, this ratio is equal to 1.618...</p>
-           <p>The golden ratio can be seen in many places in nature such as the seeds of sunflower or the top of a pinecone it is also frequently used in graphic design as it is generally seen as pleasing to the eye</p>
+           <p>The golden ratio can be seen in many places in nature such as the seeds of sunflower or the top of a pinecone it is also frequently used in graphic design because it is generally seen as pleasing to the eye</p>
            </div>
         </div>
 
